# roadmap-solutions

./: .gitignore  README.md
Python/Analysing Pharmaceutical Sales Data/: README.md  pharma_sales.ipynb  pyproject.toml
Python/Blogging Platform API/: .gitignore  README.md  app.py  db.py  schema.sql
Python/Caching Proxy/: README.md  caching_proxy.py
Python/Clean CSV/: .gitignore  README.md  clean_csv.ipynb  pyproject.toml
Python/Clean CSV/data/: employees_cleaned.csv
Python/Cleaning Netflix Dataset/: README.md  cleaning_netflix.ipynb  pyproject.toml
Python/Cleaning Netflix Dataset/data/: netflix_titles_cleaned.csv
Python/Data Visualization Tutorial/: README.md  data_visualization.ipynb  pyproject.toml
Python/Ecommerce Data Analysis/: README.md  ecommerce_data_analysis.ipynb  pyproject.toml
Python/Expense Tracker/: .gitignore  README.md  expense_tracker.py  pyproject.toml
Python/Expense Tracker API/: HANDOFF.md  README.md  pyproject.toml
Python/Expense Tracker API/Backend/app/: auth.py  database.py  main.py  models.py  schemas.py
Python/Expense Tracker API/Backend/app/routers/: expenses.py  users.py
Python/Expense Tracker API/Backend/tests/: conftest.py  test_auth.py  test_expenses.py
Python/Expense Tracker API/frontend/: .fallowrc.json  package-lock.json  package.json  tsconfig.app.json
Python/Expense Tracker API/frontend/src/: App.tsx  index.css  main.tsx
Python/Expense Tracker API/frontend/src/api/: api.ts
Python/Expense Tracker API/frontend/src/components/: ExpenseForm.tsx
Python/Exploring Iris Dataset/: README.md  iris_exploration.ipynb  pyproject.toml
Python/GitHub Trending CLI/: .gitignore  README.md  pyproject.toml  trending_repos.py
Python/GitHub Trending CLI/tests/: test_trending_repos.py
Python/Github User Activity/: .gitignore  README.md  github_activity.py  pyproject.toml
Python/Job Listings Scraper/: .gitignore  README.md  job_scraper.py  pyproject.toml
Python/Job Listings Scraper/tests/: test_job_scraper.py
Python/Number Guessing Game/: .gitignore  README.md  number_guessing_game.py
Python/Pandas Time Series/: README.md  pandas_time_series.ipynb  pyproject.toml
Python/Personal Blog/: .gitignore  README.md  app.py  requirements.txt  seed.json
Python/Personal Blog/static/: app.jsx  data.jsx  pages.jsx  style.css
Python/Personal Blog/templates/: index.html
Python/Querying SQL Python/: .gitignore  README.md  pyproject.toml  querying_sql_python.ipynb
Python/Stock Price Time Series/: README.md  pyproject.toml  stock_price_time_series.ipynb
Python/TMDB CLI/: .env.example  .gitignore  README.md  pyproject.toml  tmdb_app.py
Python/TMDB CLI/tests/: test_tmdb_app.py
Python/Task Tracker/: .gitignore  README.md  pyproject.toml  task_cli.py
Python/Titanic EDA/: .gitignore  README.md  pyproject.toml  titanic_eda.ipynb
Python/Todo List API/: README.md
Python/Todo List API/backend/: .gitignore  pyproject.toml
Python/Todo List API/backend/app/: database.py  dependencies.py  main.py  models.py  schemas.py
Python/Todo List API/backend/app/routers/: todos.py  users.py
Python/Todo List API/backend/tests/: test_auth.py  test_todos.py
Python/Todo List API/frontend/: package-lock.json  package.json
Python/Todo List API/frontend/src/: App.tsx  main.tsx
Python/Unit Converter/: .gitignore  README.md  app.py  converter.py
Python/Unit Converter/static/: style.css
Python/Unit Converter/templates/: index.html
Python/Weather API/: .env.example  .gitignore  README.md  app.py  requirements.txt
(+14 files in other folders)
