[project]
name = "expense-cli"
version = "0.1.0"
description = "roadmap.sh Expense Tracker CLI"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "w-a-s-chaudhry", email = "w.a.s.chaudhry@proton.me" }]

[project.scripts]
expense-cli = "expense_tracker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["expense_tracker.py"]
