[project]
name = "github-trending-cli"
version = "0.1.0"
description = "roadmap.sh GitHub Trending CLI"
requires-python = ">=3.12"
dependencies = ["requests>=2.31"]

[project.scripts]
trending-repos = "trending_repos:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["trending_repos.py"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
