[project]
name = "job-scraper"
version = "0.1.0"
description = "roadmap.sh Job Listings Scraper"
requires-python = ">=3.12"
dependencies = ["requests>=2.31", "beautifulsoup4>=4.12"]

[project.scripts]
job-scraper = "job_scraper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["job_scraper.py"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
