[project]
name = "tmdb-cli"
version = "0.1.0"
description = "roadmap.sh TMDB CLI"
requires-python = ">=3.12"
dependencies = ["requests>=2.31", "python-dotenv>=1.0"]

[project.scripts]
tmdb-app = "tmdb_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["tmdb_app.py"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
